# ARM_ASM_with_CMake

./: CMakeLists.txt  HelloWorld.s  TestArmASM.code-workspace  dummy.c  readme.md  toolchain.cmake
linker_script/: CMakeLists.txt  boot.S  linker_script.lds  thumb.S
